--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,19 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.App {
+  min-height: 200vh;
+}
+
+.background{
+  position: sticky;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+#root {
+  --b: #01212C;
 }
