--- a/src/components/publications/style.css
+++ b/src/components/publications/style.css
@@ -15,3 +15,19 @@
     font-weight: 500;
     word-break: break-word;
 }
+
+@media (max-width: 768px) {
+    .Publications {
+        padding: 20px;
+        width: 100%;
+    }
+    .Publications img {
+        width: 300px;
+        height: 150px;
+    }
+    .Publications p{
+        width: 300px;
+        font-size: 16px;
+    }
+    
+}
