--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -1,17 +1,17 @@
-.Header{
+.Header {
     position: sticky;
     top: 0;
-    height: 80px;
+    height: 70px;
     margin-top: -4px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0 30px;
     background-color: white;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-ul{
+ul {
     display: flex;
     list-style: none;
     margin: 0;
@@ -19,14 +19,14 @@ ul{
     margin-top: 6px;
 }
 
-ul li{
+ul li {
     margin: 0 20px;
     cursor: pointer;
     height: 20px;
     border-bottom: 2px solid transparent;
 }
 
-ul li:hover{
+ul li:hover {
     color: var(--b);
     border-bottom: 2px solid var(--b);
 }
