--- a/src/components/footer/style.css
+++ b/src/components/footer/style.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 80px;
     padding: 0 20px;
-    color: white;
+    color: white !important;
     background-color: var(--b);
     display: flex;
     align-items: center;
