--- a/src/components/background/style.css
+++ b/src/components/background/style.css
@@ -12,13 +12,16 @@
     align-items: center;
     justify-content: center;
     cursor: pointer;
-    color: white;
+    color: rgba(255, 255, 255, 0.434);
     transition: all 0.3s ease;
     animation: arrow 2s linear infinite;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .Background .arrow:hover {
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0.142);
     color: var(--b);
 }
 
