--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -6,7 +6,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 30px;
+    padding: 0 60px;
     background-color: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -20,7 +20,7 @@ ul {
 }
 
 ul li {
-    margin: 0 20px;
+    margin-left: 30px;
     cursor: pointer;
     height: 20px;
     border-bottom: 2px solid transparent;
