--- a/src/components/publications/style.css
+++ b/src/components/publications/style.css
@@ -3,6 +3,11 @@
     border-radius: 8px;
     border: 1px solid rgb(234, 234, 234);
     overflow: hidden;
+    cursor: pointer;
+}
+
+.Publications:hover {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .Publications img {
@@ -10,6 +15,14 @@
     height: 270px;
     border-radius: 10px 10px 0 0;
     object-fit: cover;
+    overflow: hidden;
+}
+
+/* Imagem aumenta quando passa o mouse */
+
+.Publications:hover img {
+    transform: scale(1.2);
+    transition: all 0.7s ease;
 }
 
 .Publications p {
@@ -24,7 +37,9 @@
 .Publications .text {
     padding: 10px;
     width: 360px;
-
+    background-color: white;
+    z-index: 1;
+    position: relative;
 }
 
 .Publications span {
