--- a/src/components/background/style.css
+++ b/src/components/background/style.css
@@ -1,4 +1,5 @@
-.Background .arrow {
+
+.background .arrow {
     position: absolute;
     margin-top: -80px;
     left: 0;
@@ -20,7 +21,7 @@
     justify-content: center;
 }
 
-.Background .arrow:hover {
+.background .arrow:hover {
     background-color: rgba(255, 255, 255, 0.142);
     color: var(--b);
 }
