--- a/src/components/footer/style.css
+++ b/src/components/footer/style.css
@@ -1,4 +1,4 @@
-.Footer {
+.footer {
     width: 100%;
     height: 80px;
     padding: 0 20px;
@@ -9,10 +9,10 @@
     justify-content: space-between;
 }
 
-.Footer img{
+.footer img{
     margin-right: 20px;
 }
 
-.Footer .icons i{
+.footer .icons i{
     margin-right: 20px;
 }
