--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -1,4 +1,4 @@
-.Header {
+.header {
     position: sticky;
     top: 0;
     height: 70px;
@@ -12,7 +12,7 @@
     z-index: 5;
 }
 
-ul {
+.header ul {
     display: flex;
     list-style: none;
     margin: 0;
@@ -20,14 +20,14 @@ ul {
     margin-top: 6px;
 }
 
-ul li {
+.header ul li {
     margin-left: 30px;
     cursor: pointer;
     height: 20px;
     border-bottom: 2px solid transparent;
 }
 
-ul li:hover {
+.header ul li:hover {
     color: var(--b);
     border-bottom: 2px solid var(--b);
 }
