--- a/src/components/publications/style.css
+++ b/src/components/publications/style.css
@@ -1,4 +1,10 @@
-.Publications {
+
+a{
+    text-decoration: none;
+    color: black
+}
+
+.publications {
     width: 360px;
     border-radius: 8px;
     border: 1px solid rgb(234, 234, 234);
@@ -6,11 +12,11 @@
     cursor: pointer;
 }
 
-.Publications:hover {
+.publications:hover {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.Publications img {
+.publications img {
     width: 360px;
     height: 270px;
     border-radius: 10px 10px 0 0;
@@ -20,12 +26,12 @@
 
 /* Imagem aumenta quando passa o mouse */
 
-.Publications:hover img {
+.publications:hover img {
     transform: scale(1.2);
     transition: all 0.7s ease;
 }
 
-.Publications p {
+.publications p {
     margin: 0px !important;
     font-size: 20px;
     font-weight: 500;
@@ -34,7 +40,7 @@
     font-weight: 700;
 }
 
-.Publications .text {
+.publications .text {
     padding: 10px;
     width: 360px;
     background-color: white;
@@ -42,22 +48,22 @@
     position: relative;
 }
 
-.Publications span {
+.publications span {
     font: 12px / 14px "Barlow";
     opacity: 0.7;
 }
 
 @media (max-width: 768px) {
-    .Publications {
+    .publications {
         width: 100%;
     }
 
-    .Publications img {
+    .publications img {
         width: 300px;
         height: 150px;
     }
 
-    .Publications p {
+    .publications p {
         width: 300px;
         font-size: 16px;
     }
