--- a/src/components/publications/style.css
+++ b/src/components/publications/style.css
@@ -22,6 +22,7 @@ a{
     border-radius: 10px 10px 0 0;
     object-fit: cover;
     overflow: hidden;
+    transition: transform 0.5s ease-in-out;
 }
 
 /* Imagem aumenta quando passa o mouse */
@@ -41,6 +42,7 @@ a{
 }
 
 .publications .text {
+    margin-top: -5px;
     padding: 10px;
     width: 360px;
     background-color: white;
