--- a/src/components/publications/style.css
+++ b/src/components/publications/style.css
@@ -1,5 +1,4 @@
-
-a{
+a {
     text-decoration: none;
     color: black
 }
@@ -55,19 +54,4 @@ a{
     opacity: 0.7;
 }
 
-@media (max-width: 768px) {
-    .publications {
-        width: 100%;
-    }
-
-    .publications img {
-        width: 300px;
-        height: 150px;
-    }
-
-    .publications p {
-        width: 300px;
-        font-size: 16px;
-    }
-
-}
+@media (max-width: 768px) {}
