--- a/src/index.css
+++ b/src/index.css
@@ -25,13 +25,11 @@ body {
 }
 
 .container {
-  padding-top: 20px;
   display: flex;
   justify-content: space-between;
-  margin-bottom: 40px;
   column-count: 4;
   column-gap: 1em;
-  margin: 0 60px;
+  margin: 30px 60px;
   overflow-x: auto;
 }
 
@@ -48,9 +46,13 @@ body {
   align-items: center;
 }
 
-@media(max-width: 768px){
-  .container{
-    padding: 0 30px;
+@media(max-width: 768px) {
+  .container {
+    margin: 30px;
+  }
+
+  .title {
+    padding-left: 30px;
   }
 }
 
