--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,6 @@ body {
 
 .display-flex {
   display: flex;
-  align-items: center;
 }
 
 @media(max-width: 768px) {
@@ -57,3 +56,7 @@ body {
 }
 
 /* NEW */
+
+.new-minis {
+  height: 100%;
+}
