--- a/src/components/background/style.css
+++ b/src/components/background/style.css
@@ -38,3 +38,15 @@
         margin-top: -80px;
     }
 }
+
+.background img {
+    width: 100%;
+    height: 50vh;
+    object-fit: cover
+}
+
+@media(max-width: 768px) {
+    .background img {
+        height: 30vh;
+    }
+}
