--- a/src/components/footer/style.css
+++ b/src/components/footer/style.css
@@ -1,7 +1,7 @@
 .footer {
     width: 100%;
     height: 80px;
-    padding: 0 20px;
+    padding: 0 60px;
     color: white !important;
     background-color: var(--b);
     display: flex;
@@ -11,8 +11,18 @@
 
 .footer img{
     margin-right: 20px;
+    height: 30px;
+    min-height: 30px;
+    min-width: 30px;
+    width: 30px;
 }
 
 .footer .icons i{
     margin-right: 20px;
+}
+
+@media(max-width: 768px){
+    .footer{
+        padding: 0 30px;
+    }
 }
