--- a/src/index.css
+++ b/src/index.css
@@ -41,8 +41,12 @@ body {
   margin-bottom: 0px !important;
 }
 
-.display-flex {
+.display-flex, .display-flex-center {
   display: flex;
+}
+
+.display-flex-center{
+  align-items: center;
 }
 
 @media(max-width: 768px) {
