--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -36,29 +36,11 @@
     align-items: center;
 }
 
-.header .logo img {
+.header img {
     width: 40px;
     min-width: 40px;
     height: 40px;
     margin-right: 10px;
-}
-
-.header .logo-new {
-    height: 20px;
-    padding: 6px;
-    font-size: 10px;
-    background-color: #FD0200;
-    border-radius: 3px;
-    color: white;
-    font-weight: 600;
-    display: flex;
-    align-items: center;
-    margin-top: 15px;
-    cursor: pointer;
-}
-
-.header .logo-new:hover {
-    background-color: #d70000
 }
 
 @media(max-width: 768px) {
