--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -43,6 +43,10 @@
     margin-right: 10px;
 }
 
+.header img:hover{
+    opacity: 0.9;
+}
+
 @media(max-width: 768px) {
     .header {
         padding: 0 30px;
