--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,10 @@ body {
     margin: 30px;
   }
 
+  .read-more{
+    padding: 10px 30px
+  }
+
   .title {
     padding-left: 30px;
   }
@@ -65,6 +69,18 @@ body {
 .new-minis {
   margin-right: 60px;
   height: 100%;
+}
+
+.new .container .display-block h1{
+  font-size: 30px;
+}
+
+.new .container .display-block p{
+  font-size: 20px;
+}
+
+.new .container{
+  margin: 30px 100px;
 }
 
 @media(max-width: 768px) {
