--- a/src/index.css
+++ b/src/index.css
@@ -82,7 +82,7 @@ body {
 }
 
 .new .container{
-  margin: 30px 60px;
+  margin: 30px 100px !important;
 }
 
 .new h1{
@@ -91,9 +91,10 @@ body {
 
 .new img{
   width: 100%;
+  padding: 0 100px;
   height: 400px;
   object-fit: fill;
-  border-radius: 8px;
+  border-radius: 8px !important;
 }
 
 .new .desc{
