--- a/src/pages/admin/addNew/style.css
+++ b/src/pages/admin/addNew/style.css
@@ -40,7 +40,8 @@
     cursor: pointer;
 }
 
-.admin button{
+.admin .send{
+    width: 100%;
     height: 40px;
     background-color: var(--b);
     color: white;
