--- a/src/components/publications/style.css
+++ b/src/components/publications/style.css
@@ -35,6 +35,7 @@ a {
     margin: 0px !important;
     font-size: 20px;
     font-weight: 500;
+    height: 65px;
     word-break: break-word;
     font-size: 18px;
     font-weight: 700;
