--- a/src/pages/admin/addNew/style.css
+++ b/src/pages/admin/addNew/style.css
@@ -49,3 +49,9 @@
     cursor: pointer;
     margin-top: 20px;
 }
+
+@media screen and (min-width: 768px) {
+    .admin .container {
+        margin: 30px 20px;
+    }
+}
