--- a/src/components/publications/style.css
+++ b/src/components/publications/style.css
@@ -4,7 +4,6 @@ a {
 }
 
 .publications {
-    width: 360px;
     border-radius: 8px;
     border: 1px solid rgb(234, 234, 234);
     overflow: hidden;
@@ -16,7 +15,7 @@ a {
 }
 
 .publications img {
-    width: 360px;
+    width: 100%;
     height: 270px;
     border-radius: 10px 10px 0 0;
     object-fit: cover;
@@ -42,9 +41,9 @@ a {
 }
 
 .publications .text {
+    width: 100%;
     margin-top: -5px;
     padding: 10px;
-    width: 360px;
     background-color: white;
     z-index: 1;
     position: relative;
