--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ body {
 
 .container {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   grid-gap: 10px;
   margin: 30px 60px;
   overflow-x: auto;
@@ -47,6 +47,18 @@ body {
 
 .display-flex-center {
   align-items: center;
+}
+
+@media(max-width: 1240px) {
+  .home .container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media(max-width: 1024px) {
+  .home .container {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 @media(max-width: 768px) {
